err/horse-lastfm.err
Listing '.'...
Listing './bin'...
Compiling './bin/wsdump.py'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Flask-0.12.2.dist-info'...
Listing './lib/python3.5/site-packages/FormEncode-1.3.1.egg-info'...
Listing './lib/python3.5/site-packages/Jinja2-2.10.dist-info'...
Listing './lib/python3.5/site-packages/MarkupSafe-1.0.egg-info'...
Listing './lib/python3.5/site-packages/PyDispatcher-2.0.5.egg-info'...
Listing './lib/python3.5/site-packages/SQLObject-3.5.0.dist-info'...
Listing './lib/python3.5/site-packages/Werkzeug-0.14.1.dist-info'...
Listing './lib/python3.5/site-packages/certifi'...
Listing './lib/python3.5/site-packages/certifi-2017.11.5.dist-info'...
Listing './lib/python3.5/site-packages/chardet'...
Listing './lib/python3.5/site-packages/chardet/cli'...
Listing './lib/python3.5/site-packages/chardet-3.0.4.dist-info'...
Listing './lib/python3.5/site-packages/click'...
Listing './lib/python3.5/site-packages/click-6.7.dist-info'...
Listing './lib/python3.5/site-packages/docs'...
Listing './lib/python3.5/site-packages/flask'...
Listing './lib/python3.5/site-packages/flask/ext'...
Listing './lib/python3.5/site-packages/formencode'...
Listing './lib/python3.5/site-packages/formencode/i18n'...
Listing './lib/python3.5/site-packages/formencode/i18n/cs'...
Listing './lib/python3.5/site-packages/formencode/i18n/cs/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/formencode/i18n/da'...
Listing './lib/python3.5/site-packages/formencode/i18n/da/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/formencode/i18n/de'...
Listing './lib/python3.5/site-packages/formencode/i18n/de/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/formencode/i18n/el'...
Listing './lib/python3.5/site-packages/formencode/i18n/el/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/formencode/i18n/es'...
Listing './lib/python3.5/site-packages/formencode/i18n/es/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/formencode/i18n/et'...
Listing './lib/python3.5/site-packages/formencode/i18n/et/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/formencode/i18n/fi'...
Listing './lib/python3.5/site-packages/formencode/i18n/fi/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/formencode/i18n/fr'...
Listing './lib/python3.5/site-packages/formencode/i18n/fr/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/formencode/i18n/it'...
Listing './lib/python3.5/site-packages/formencode/i18n/it/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/formencode/i18n/ja'...
Listing './lib/python3.5/site-packages/formencode/i18n/ja/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/formencode/i18n/ko'...
Listing './lib/python3.5/site-packages/formencode/i18n/ko/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/formencode/i18n/lt'...
Listing './lib/python3.5/site-packages/formencode/i18n/lt/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/formencode/i18n/nb_NO'...
Listing './lib/python3.5/site-packages/formencode/i18n/nb_NO/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/formencode/i18n/nl'...
Listing './lib/python3.5/site-packages/formencode/i18n/nl/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/formencode/i18n/pl'...
Listing './lib/python3.5/site-packages/formencode/i18n/pl/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/formencode/i18n/pt_BR'...
Listing './lib/python3.5/site-packages/formencode/i18n/pt_BR/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/formencode/i18n/pt_PT'...
Listing './lib/python3.5/site-packages/formencode/i18n/pt_PT/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/formencode/i18n/ru'...
Listing './lib/python3.5/site-packages/formencode/i18n/ru/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/formencode/i18n/sk'...
Listing './lib/python3.5/site-packages/formencode/i18n/sk/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/formencode/i18n/sl'...
Listing './lib/python3.5/site-packages/formencode/i18n/sl/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/formencode/i18n/sr'...
Listing './lib/python3.5/site-packages/formencode/i18n/sr/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/formencode/i18n/sv'...
Listing './lib/python3.5/site-packages/formencode/i18n/sv/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/formencode/i18n/tr'...
Listing './lib/python3.5/site-packages/formencode/i18n/tr/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/formencode/i18n/zh_CN'...
Listing './lib/python3.5/site-packages/formencode/i18n/zh_CN/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/formencode/i18n/zh_TW'...
Listing './lib/python3.5/site-packages/formencode/i18n/zh_TW/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/formencode/javascript'...
Listing './lib/python3.5/site-packages/formencode/tests'...
Listing './lib/python3.5/site-packages/formencode/tests/htmlfill_data'...
Listing './lib/python3.5/site-packages/horse'...
Listing './lib/python3.5/site-packages/horse/bridles'...
Listing './lib/python3.5/site-packages/horse/bridles/core'...
Listing './lib/python3.5/site-packages/horse/bridles/examples'...
Listing './lib/python3.5/site-packages/horse/ext'...
Listing './lib/python3.5/site-packages/horse/servers'...
Listing './lib/python3.5/site-packages/horse/utils'...
Listing './lib/python3.5/site-packages/horse/utils/google'...
Listing './lib/python3.5/site-packages/horse-0.2.17.egg-info'...
Listing './lib/python3.5/site-packages/horse_lastfm'...
Listing './lib/python3.5/site-packages/horse_lastfm-0.1.3.egg-info'...
Listing './lib/python3.5/site-packages/idna'...
Listing './lib/python3.5/site-packages/idna-2.6.dist-info'...
Listing './lib/python3.5/site-packages/itsdangerous-0.24.egg-info'...
Listing './lib/python3.5/site-packages/jinja2'...
Compiling './lib/python3.5/site-packages/jinja2/asyncfilters.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncfilters.py", line 24
    yield item
    ^
SyntaxError: 'yield' inside async function

Compiling './lib/python3.5/site-packages/jinja2/asyncsupport.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncsupport.py", line 35
    yield event
    ^
SyntaxError: 'yield' inside async function

Listing './lib/python3.5/site-packages/markupsafe'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pydispatch'...
Listing './lib/python3.5/site-packages/pylast'...
Listing './lib/python3.5/site-packages/pylast-2.0.0.dist-info'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests-2.18.4.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/sqlobject'...
Listing './lib/python3.5/site-packages/sqlobject/firebird'...
Listing './lib/python3.5/site-packages/sqlobject/include'...
Listing './lib/python3.5/site-packages/sqlobject/include/tests'...
Listing './lib/python3.5/site-packages/sqlobject/inheritance'...
Listing './lib/python3.5/site-packages/sqlobject/inheritance/tests'...
Listing './lib/python3.5/site-packages/sqlobject/manager'...
Listing './lib/python3.5/site-packages/sqlobject/maxdb'...
Listing './lib/python3.5/site-packages/sqlobject/mssql'...
Listing './lib/python3.5/site-packages/sqlobject/mysql'...
Listing './lib/python3.5/site-packages/sqlobject/postgres'...
Listing './lib/python3.5/site-packages/sqlobject/rdbhost'...
Listing './lib/python3.5/site-packages/sqlobject/sqlite'...
Listing './lib/python3.5/site-packages/sqlobject/sybase'...
Listing './lib/python3.5/site-packages/sqlobject/tests'...
Listing './lib/python3.5/site-packages/sqlobject/util'...
Listing './lib/python3.5/site-packages/sqlobject/versioning'...
Listing './lib/python3.5/site-packages/sqlobject/versioning/test'...
Listing './lib/python3.5/site-packages/urllib3'...
Listing './lib/python3.5/site-packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/urllib3/contrib/_securetransport'...
Listing './lib/python3.5/site-packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/urllib3/packages/backports'...
Listing './lib/python3.5/site-packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/urllib3/util'...
Listing './lib/python3.5/site-packages/urllib3-1.22.dist-info'...
Listing './lib/python3.5/site-packages/websocket'...
Listing './lib/python3.5/site-packages/websocket/tests'...
Listing './lib/python3.5/site-packages/websocket/tests/data'...
Listing './lib/python3.5/site-packages/websocket_client-0.46.0.dist-info'...
Listing './lib/python3.5/site-packages/werkzeug'...
Listing './lib/python3.5/site-packages/werkzeug/contrib'...
Listing './lib/python3.5/site-packages/werkzeug/debug'...
Listing './lib/python3.5/site-packages/werkzeug/debug/shared'...
Listing './share'...
Listing './share/python-wheels'...
